# blog

./: Cargo.toml
posts/draft/: 000 | A New Eden.md  000 | Baptising Humanity.md  000 | Completing the Industrial Revolution.md  000 | Infinite Energy Glitch.md
posts/release/: 000 | This is a Release.md  001 | About.md  002 | New York to LA in 21 minutes.md  003 | Curing Death.md  004 | Going Suborbital.md
src/: file.rs  main.rs  posts.rs
static/: global.css
