[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.35"
flate2 = "1.0.28"
itertools = "0.12.1"
markdown = "1.0.0-alpha.16"
mime_guess = "2.0.4"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full"] }
